<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="30dp"
    tools:context=".Details">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        android:textSize="40sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem1"
        android:id="@+id/txtItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem2"
        android:id="@+id/txtItem2"
        app:layout_constraintTop_toBottomOf="@+id/txtItem1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem3"
        android:id="@+id/txtItem3"
        app:layout_constraintTop_toBottomOf="@+id/txtItem2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem4"
        android:id="@+id/txtItem4"
        app:layout_constraintTop_toBottomOf="@+id/txtItem3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem5"
        android:id="@+id/txtItem5"
        app:layout_constraintTop_toBottomOf="@+id/txtItem4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem6"
        android:id="@+id/txtItem6"
        app:layout_constraintTop_toBottomOf="@+id/txtItem5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/txtItem7"
        android:id="@+id/txtItem7"
        app:layout_constraintTop_toBottomOf="@+id/txtItem6"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>