<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="40sp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imgConcert"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description"
        android:src="@drawable/image_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDetails"
        android:id="@+id/btnDetails"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imgConcert"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/button_border"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:shadowColor="#000000"
        android:textSize="34sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>